--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -11,4 +11,8 @@ services:
     environment:
       - NODE_ENV=production
     command: node index.js
+  mongo:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
   
