--- a/docker-compose.prd.yml
+++ b/docker-compose.prd.yml
@@ -10,6 +10,8 @@ services:
         NODE_ENV: production
     environment:
       - NODE_ENV=production
+      - MONGO_USER=${MONGO_USER}
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
     command: node index.js
   mongo:
     environment:
